5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1636_2730.log
== TEST (2019-04-04 23:02:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Valor x: "))
y = float(input("Valor y: "))

if (y > 0):
	msg = "Superiores"
else (y < 0):
	msg = "Inferiores"
print(msg)
	
	
-- ERROR:
File "XXXX", line 7
    else (y < 0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:02:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Valor x: "))
y = float(input("Valor y: "))

if (y > 0):
	msg = "Superiores"
else:
	msg = "Inferiores"
print(msg)
	
	
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:02:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Valor x: "))
y = float(input("Valor y: "))

if (y > 0):
	msg = "Superiores"
else:
	msg = "Inferiores"
print(msg)
	
	
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:02:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Valor x: "))
y = float(input("Valor y: "))

if (y > 0):
	msg = "Superiores"
else:
	msg = "Inferiores"
print(msg)
	
	
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:02:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Valor x: "))
y = float(input("Valor y: "))

if (y > 0):
	msg = "Superiores"
else:
	msg = "Inferiores"
print(msg)
	
	
-- EXECUTION TIME:
0.126678
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
